# emca

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  emca.py  requirements.txt
controller/: controller.py  controller_detector.py  controller_filter.py  controller_options.py  controller_scene.py  controller_stream.py
core/: color.py  color3.py  hdr_graphics_view_base.py  hdr_image.py  highlighter_base.py  items_tree_node.py  logger.py  messages.py  plot_2d.py  plot_2d_xy.py  plot_figure_base.py  plot_rgb.py  plugin.py  point.py  point2.py  point3.py  pyside2_uic.py  vector.py  vector2.py  vector3.py
detector/: detector.py
filter/: filter.py  filter_list_item.py  filter_settings.py  filter_type.py
model/: camera_data.py  contribution_data.py  intersection_data.py  mesh_data.py  model.py  options_data.py  path_data.py  pixel_data.py  render_data.py  render_info.py  user_data.py
plugins/: __init__.py  plugins_handler.py  plugins_view_container.py
plugins/plugin_intersection_data/: intersection_data_plot_2d.py  intersection_data_plot_3d.py  intersection_data_plot_rgb.py  plot_list_item.py  plugin_intersection_data_plots.py
plugins/plugin_intersection_data/ui/: plugin_plots.ui
plugins/plugin_path_depth/: plugin_path_depth.py
plugins/plugin_spherical_view/: plugin_spherical_view.py  spherical_graphics_view.py  view_spherical_view_image.py
plugins/plugin_spherical_view/ui/: spherical_view.ui  spherical_view_image.ui
renderer/: camera.py  mesh.py  path.py  renderer.py  rubberband.py  scene_renderer.py  shape.py  sphere.py
resources/: breeze_resources.py  options.ini
server/: CMakeLists.txt  README.md
server/include/: dataapi.h  datatypes.h  emcaserver.h  heatmapdata.h  messages.h  pathdata.h  platform.h  plugin.h  renderinterface.h  scenedata.h  stream.h
server/include/emca/: emcaserver.h  stream.h
server/src/: dataapi.cpp  emcaserver.cpp  heatmapdata.cpp  pathdata.cpp
stream/: socket_stream.py  socket_stream_client.py  stream.py
view/ui/: about.ui  connect.ui  detector.ui  emca.ui  filter.ui  options.ui  render_data.ui  render_image.ui  render_info.ui  render_scene.ui  render_scene_options.ui
view/view_main/: main_view.py  pixel_icon.py  popup_messages.py  view_about.py  view_connect_settings.py  view_detector_settings.py  view_emca.py  view_filter_settings.py  view_options_settings.py  view_render_settings.py
view/view_pixel_data/: view_pixel_data.py
view/view_render_data/: view_render_data.py
view/view_render_image/: hdr_graphics_view.py  view_render_image.py
view/view_render_scene/: view_render_scene.py  view_render_scene_options.py
view/view_sample_contribution/: view_sample_contribution_plot.py  view_sample_depth_plot.py  view_sample_lum_plot.py
